[api] refactor: update notification context