@@ -1,8 +1,11 @@
 package br.app.vizo.infrastructure.persistence;
 
+import br.app.vizo.application.dto.page.PageDTO;
+import br.app.vizo.application.dto.page.PaginationDTO;
 import br.app.vizo.application.mapper.NotificationMapper;
 import br.app.vizo.core.notification.Notification;
 import br.app.vizo.core.notification.NotificationRepository;
+import br.app.vizo.core.notification.event.DomainEvent;
 import br.app.vizo.infrastructure.persistence.jpa.entity.NotificationEntity;
 import br.app.vizo.infrastructure.persistence.jpa.repository.NotificationJpaRepository;
 import org.springframework.stereotype.Repository;
@@ -23,25 +26,33 @@ public class NotificationRepositoryImpl implements NotificationRepository {
     }
 
     @Override
-    public Notification<?> save(Notification<?> notification) {
+    public Notification<? extends DomainEvent> save(Notification<? extends DomainEvent> notification) {
         NotificationEntity entity = this.mapper.toEntity(notification);
         NotificationEntity saved = this.jpaRepository.save(entity);
         return this.mapper.toModel(saved);
     }
 
     @Override
-    public List<Notification<?>> findAllByRecipientId(UUID id) {
-        return this.jpaRepository.findAllByRecipientId(id)
-                .stream()
-                .map(this.mapper::toModel)
-                .collect(Collectors.toList());
+    public void saveAll(List<Notification<? extends DomainEvent>> notifications) {
+        List<NotificationEntity> notificationEntities = notifications.stream().map(this.mapper::toEntity)
+                .toList();
+
+        this.jpaRepository.saveAll(notificationEntities);
     }
 
     @Override
-    public List<Notification<?>> findAllByRecipientIdAndRead(UUID id, boolean read) {
-        return this.jpaRepository.findAllByRecipientIdAndRead(id, read)
-                .stream()
-                .map(this.mapper::toModel)
-                .collect(Collectors.toList());
+    public PageDTO<Notification<? extends DomainEvent>> findAllByRecipientId(UUID id, PaginationDTO pagination) {
+        var page = this.jpaRepository.findAllByRecipientId(id, PaginationDTO.resolve(pagination))
+                .map(this.mapper::toModel);
+
+        return PageDTO.of(page);
+    }
+
+    @Override
+    public PageDTO<Notification<? extends DomainEvent>> findAllByRecipientIdAndRead(UUID id, boolean read, PaginationDTO pagination) {
+        var page = this.jpaRepository.findAllByRecipientIdAndRead(id, read, PaginationDTO.resolve(pagination))
+                .map(this.mapper::toModel);
+
+        return PageDTO.of(page);
     }
 }
